# synexisai-api-python

./: .gitignore  README.md  email_utils.py  main.py  pyproject.toml  requirements.txt
